--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>kiwiirc</title>
+    <style>
+    /* target specific styles */
+    body {
+    	/* disable the 'pull down to refresh' on mobiles */
+    	overflow: hidden;
+    }
+    </style>
   </head>
   <body>
     <div id="app"></div>
