--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" type="image/png" href="static/favicon.png">
-    <title>Kiwi IRC</title>
+    <title>Kiwi IRC Test</title>
     <style>
     /* target specific styles */
     body {
