--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" type="image/png" href="static/favicon.png">
     <title>Kiwi IRC</title>
     <style>
-    /* target specific styles */
+        /* target specific styles */
     body {
-    	/* disable the 'pull down to refresh' on mobiles */
-    	overflow: hidden;
+        /* disable the 'pull down to refresh' on mobiles */
+        overflow: hidden;
     }
     </style>
     <style class="embedly-css">
         .card .hdr {
-            display:none;
+            display: none;
         }
     </style>
-  </head>
-  <body>
+    <script type="text/javascript">
+        (function () {
+            function loadPolyfill(src) {
+                var scriptElement = document.createElement('script');
+                scriptElement.async = false;
+                scriptElement.src = src;
+                document.head.appendChild(scriptElement);
+            }
+            if (!('Promise' in window)) {
+                loadPolyfill('promise-polyfill.js');
+            }
+            if (!('fetch' in window)) {
+                loadPolyfill('fetch-polyfill.js');
+            }
+        })();
+    </script>
+</head>
+
+<body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
